--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "dev": "npx nodemon",
     "build": "npx tsc",
-    "start": "npm run build && node build/main",
+    "start": "npm run build && node build/index",
     "lint": "npx eslint ./src",
     "format": "npx eslint ./src --fix"
   },
@@ -16,6 +16,7 @@
     "esnext"
   ],
   "devDependencies": {
+    "@types/config": "^3.3.3",
     "@types/express": "^4.17.21",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.11.1",
@@ -27,6 +28,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "config": "^3.3.11",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "pg": "^8.11.3",
