--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "devDependencies": {
     "@types/config": "^3.3.3",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^18.15.11",
     "@types/pg": "^8.11.1",
